<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20_tip">Amazing (20% tip)</string>
    <string name="good_18_tip">Good (18% tip)</string>
    <string name="average_15_tip">Average (15% tip)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="email_icon">Email icon</string>
</resources>